# server-monitor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yaml.example  pyproject.toml
.github/workflows/: build-and-release.yml  test.yml
src/server_monitor/: __init__.py  __main__.py  checks.py  cli.py  config.py  database.py  health.py  metrics.py  monitor.py  notifications.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_check_factory.py  test_checks.py  test_cli.py  test_config.py  test_database.py  test_health.py  test_http_check.py  test_metrics.py  test_notifications.py  test_tcp_check.py  test_tls_check.py
